--- a/MvcNetCoreUtilidades/MvcNetCoreUtilidades.csproj
+++ b/MvcNetCoreUtilidades/MvcNetCoreUtilidades.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\facturas\" />
+    <Compile Remove="wwwroot\facturas\**" />
+    <Compile Remove="wwwroot\images\**" />
+    <Content Remove="wwwroot\facturas\**" />
+    <Content Remove="wwwroot\images\**" />
+    <EmbeddedResource Remove="wwwroot\facturas\**" />
+    <EmbeddedResource Remove="wwwroot\images\**" />
+    <None Remove="wwwroot\facturas\**" />
+    <None Remove="wwwroot\images\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
